syntax = "proto3";
package stride.icaoracle;

option go_package = "github.com/Stride-Labs/stride/v5/x/icaoracle/types";

// Msg defines the Msg service.
service Msg {
  // Adds a new oracle given a provided connection
  rpc AddOracle(MsgAddOracle) returns (MsgAddOracleResponse);
  // Instantiates an Oracle CW contract
  rpc InstantiateOracle(MsgInstantiateOracle)
      returns (MsgInstantiateOracleResponse);
  // Restores the oracle ICA channel after a closure
  rpc RestoreOracleICA(MsgRestoreOracleICA)
      returns (MsgRestoreOracleICAResponse);
}

// Adds a new oracle
message MsgAddOracle {
  string creator = 1;
  string connection_id = 2;
}
message MsgAddOracleResponse {}

// Instantiates the oracle's CW contract
message MsgInstantiateOracle {
  string creator = 1;
  string oracle_chain_id = 2;
  uint64 contract_code_id = 3;
}
message MsgInstantiateOracleResponse {}

// Restore's a closed ICA channel for a given oracle
message MsgRestoreOracleICA {
  string creator = 1;
  string oracle_chain_id = 2;
}
message MsgRestoreOracleICAResponse {}